--- a/contact_us.html
+++ b/contact_us.html
@@ -21,7 +21,7 @@
       </p>
 </fieldset>
 <fieldset>
-   <p>COMMENT:  <textarea name="" rows="5" cols="50"></textarea></p>
+   <p>COMMENT:  <textarea name="" rows="5" cols=""></textarea></p>
      </fieldset>
      <fieldset>
         <P> EMAIL ID:* <input type="email" name="" 
