--- a/contact_us.html
+++ b/contact_us.html
@@ -51,7 +51,8 @@
         <a href="http://www.twitter.com/@AromaGupta" class="fa fa-twitter" target="_blank" rel="noopener noreferrer"></a>
         <a href="http://www.facebook.com/aroma.gupta.9210" class="fa fa-facebook" target="_blank" rel="noopener noreferrer"></a>
         <a href="#" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
-        <a href="http://www.snapchat.com/add/aroma14120" class="fa fa-snapchat-ghost" target="_blank" rel="noopener noreferrer"></a>
+        <a href="#" class="fa fa-snapchat-ghost" target="_blank" rel="noopener noreferrer"></a>
+        <a href="#" class="fa fa-youtube" target="_blank" rel="noopener noreferrer"></a>
         
         </aside>
     </footer>
